[package]
name = "rustmailer"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.1.11", features = ["embed", "compression", "rustls"] }
poem-derive = "3.1.11"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
